[project]
name = "emtmetrics"
version = "0.1.0"
description = ""
authors = [
    {name = "isrojas1",email = "ivansanchez@uma.es"}
]
readme = "README.md"
requires-python = ">=3.12 <3.13"
dependencies = [
    "pykalman (>=0.10.1, <0.11.0)",
    "influxdb-client (>=1.49.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "mysql-connector-python (>=9.3.0,<10.0.0)",
    "spicy (>=0.16.0,<0.17.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "emtmetrics", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
